--- a/ERPAnimalia/Views/Product/Add.cshtml
+++ b/ERPAnimalia/Views/Product/Add.cshtml
@@ -72,11 +72,11 @@
 
                                 <div class="form-group">
                                     <label class="col-md-4" for="pwd">Precio Costo</label>
-                                    @Html.TextBoxFor(m => m.ListaPrecioItem.PrecioCosto, new { @class = "form-control", type = "text", placeholder = "Precio Costo" })
+                                    @Html.TextBoxFor(m => m.PrecioCosto, new { @class = "form-control", type = "text", placeholder = "Precio Costo" })
                                 </div>
                                 <div class="form-group">
                                     <label class="col-md-4" for="pwd">Precio Venta</label>
-                                    @Html.TextBoxFor(m => m.ListaPrecioItem.PrecioVenta, new { @class = "form-control", type = "text", placeholder = "Precio Venta" })
+                                    @Html.TextBoxFor(m => m.PrecioVenta, new { @class = "form-control", type = "text", placeholder = "Precio Venta" })
                                 </div>
                             </div>
                             <button type="submit" name="SaveProduct" value="SaveProduct" class="btn btn-primary">Agregar Producto</button>
