--- a/ERPAnimalia/Views/Product/Edit.cshtml
+++ b/ERPAnimalia/Views/Product/Edit.cshtml
@@ -55,7 +55,7 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="cant">Cantidad:</label>
             <div class="col-sm-10">
-                @Html.EditorFor(m => m.quantity, new { @class = "form-control", type = "text" })
+                @Html.EditorFor(m => m.Cantidad, new { @class = "form-control", type = "text" })
 
             </div>
         </div>
