--- a/ERPAnimalia/Views/ListProduct/Index.cshtml
+++ b/ERPAnimalia/Views/ListProduct/Index.cshtml
@@ -12,54 +12,53 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
     <link href="~/Content/grid-0.4.3.min.css" rel="stylesheet" type="text/css">
-
-
     <script src="~/Scripts/client.js"></script>
-
-    <link href="~/Content/bootstrap-datepicker.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
-    <script src="~/Scripts/bootstrap-datepicker.js"></script>
-    <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js" type="text/javascript"></script>
     <script src="~/Scripts/grid-0.4.3.min.js" type="text/javascript"></script>
 </head>
 <body>
     <script type="text/javascript">
-
+        var gridProduct;
         $(document).ready(function () {
-            debugger;
-            
-            var gridProduct = $("#gridProduct").grid({
+
+             gridProduct = $("#gridProduct").grid({
                 dataKey: "IdProducto",
                 uiLibrary: "bootstrap",
                 columns: [
                 { field: "IdProducto", hidden: true },
                 { field: "Codigo", title: "Código", sortable: true, width: 80 },
-                { field: "Categoria", title: "Código", sortable: true, width: 80 },
                 { field: "Marca", title: "Marca", sortable: true, width: 200 },
-                { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 250 },
-                { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 250 },
-                { field: "TipoProducto", title: "Tipo Producto", sortable: true, width: 250 },
-                { field: "Kg", title: "Kg", sortable: true, width: 250 },
-                { field: "Cantidad", title: "Cantidad", sortable: true, width: 250 },
-                { field: "PrecioCosto", title: "Precio Costo", sortable: true, width: 250 },
-                { field: "RentabilidadPeso", title: "Renabilidad $", sortable: true, width: 250 },
-                { field: "Rentabilidad%", title: "Renabilidad %", sortable: true, width: 250 },
+                { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 100 },
+                { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 100 },
+                { field: "SubCategoryName", title: "SubCategoria", sortable: true, width: 100 },
+                 { field:"CategoryName", title: "Categoria", sortable: true, width: 100 },
+                { field: "Kg", title: "Kg", sortable: true, width: 80 },
+                { field: "Cantidad", title: "Cantidad", sortable: true, width: 80 },
+                { field: "PrecioCosto", title: "Precio Costo", sortable: true, width: 80 },
+                { field: "PrecioVenta", title: "Precio Venta", sortable: true, width: 80 },
+                { field: "RentabilidadPeso", title: "Renabilidad $", sortable: true, width: 80 },
+                { field: "Rentabilidad%", title: "Renabilidad %", sortable: true, width: 80 }
                 //{ title: '', field: 'Edit', width: 24, type: 'icon', icon: 'ui-icon-pencil', tooltip: 'Edit', events: { 'click': Edit } },
                 //{ title: '', field: 'Delete', width: 24, type: 'icon', icon: 'ui-icon-close', tooltip: 'Delete', events: { 'click': Delete } }
                 ],
                 pager: { limit: 5, sizes: [2, 5, 10, 20] }
             });
               
-            $("#btnAddProduct").on("click", Add);
+            //$("#btnAddProduct").on("click", Add);
             //$("#btnSave").on("click", Save);
             $("#btnSearch").on("click", Search);
         });
+
+        function Search() {
+            debugger;
+            gridProduct.reload({ searchString: $("#search").val() });
+        }
+        
     </script>
 
 
     <div class="panel panel-primary">
-        <div class="panel-heading">Cliente</div>
+        <div class="panel-heading">Producto</div>
         <br class="panel-body">
         <div class="form-group row">
             <div class="col-md-3 col-md-offset-1">
@@ -71,7 +70,7 @@
                 </div>
             </div>
             <div class="col-md-2">
-                <button type="button" id="btnAddProduct" class="btn btn-primary pull-right">Agregar Producto</button>
+                <button type="submit" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Product")'">Agregar Producto</button>
             </div>
         </div>
         <br />
