--- a/ERPAnimalia/Content/Site.css
+++ b/ERPAnimalia/Content/Site.css
@@ -87,10 +87,10 @@ td{
    background-color:#0044cc !important;
 }
 
-a {
+/*a {
     color: #fff !important;
     background-color: #03A9F4 !important;
-}
+}*/
 th{
   background-color: #0044cc!important;
   color: #fff !important;
