--- a/ERPAnimalia/Views/Cliente/Cliente.cshtml
+++ b/ERPAnimalia/Views/Cliente/Cliente.cshtml
@@ -4,26 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Agregar Clientes</title>
-    @Styles.Render("~/Content/Site.css")
-    <script src="~/Scripts/gijgo.min.js"></script>
-    <link href="~/Content/css/gijgo.css" rel="stylesheet" />
+ 
+    <script src="~/Scripts/jquery-2.1.4.min.js"></script>
+     <script src="~/Scripts/jquery.1.10.1.js"></script>
     <script src="~/Scripts/gijgo.js"></script>
-    <link href="~/Content/css/gijgo.min.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-    <link href="~/Content/grid-0.4.3.min.css" rel="stylesheet" type="text/css">
-    
-  
-    <script src="~/Scripts/client.js"></script>
-
-        <link href="~/Content/bootstrap-datepicker.css" rel="stylesheet" />
-        <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
-        <script src="~/Scripts/bootstrap-datepicker.js"></script>
-        <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
-        <script src="~/Scripts/bootstrap.min.js" type="text/javascript"></script>
-        <script src="~/Scripts/grid-0.4.3.min.js" type="text/javascript"></script>
-         <script src="~/Scripts/jquery.1.10.1.js"></script>
-      
 
      <script type="text/javascript">
             ids = new Array();
