--- a/ERPAnimalia/Views/Product/Add.cshtml
+++ b/ERPAnimalia/Views/Product/Add.cshtml
@@ -85,11 +85,11 @@
 
                                 <div class="form-group">
                                     <label class="col-md-4" for="pwd">Precio Costo</label>
-                                    @Html.TextBoxFor(m => m.PrecioCosto, new { @class = "form-control", type = "text", placeholder = "Precio Costo" })
+                                    @Html.TextBoxFor(m => m.PrecioCosto, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label class="col-md-4" for="pwd">Precio Venta</label>
-                                    @Html.TextBoxFor(m => m.PrecioVenta, new { @class = "form-control", type = "text", placeholder = "Precio Venta" })
+                                    @Html.TextBoxFor(m => m.PrecioVenta, new { type = "number", min = "0", step = "0.01" , @class = "form-control" }) 
                                 </div>
                             </div>
                             <button type="submit" name="SaveProduct" value="save" class="btn btn-primary">Agregar Producto</button>
