--- a/ERPAnimalia/Views/Cliente/Cliente.cshtml
+++ b/ERPAnimalia/Views/Cliente/Cliente.cshtml
@@ -10,6 +10,7 @@
     <script src="~/Scripts/gijgo.js"></script>
 
      <script type="text/javascript">
+
             ids = new Array();
             var grid;
             var gridProduct;
@@ -132,7 +133,7 @@
                 $("#mail").val(e.data.record.Telefono);
                 $("#IdProducto").val(e.data.record.IdProducto);
                 $("#mascota").val(e.data.record.Mascota);
-                $("#dias").val(e.data.record.dias)
+                $("#dias").val(e.data.record.Dias)
                 
                 $(e.data.record.Productos).each(function (index, element) {
 
@@ -158,7 +159,7 @@
             }
 
             function Add() {
-                var $j = jQuery.noConflict();
+               
                 $("#idCliene").val("");
                 $("#codigo").val("");
                 $("#fechaCompra").val("");
@@ -170,7 +171,7 @@
                 $("#mail").val("");
                 $("#mascota").val("");
                 $("#dias").val("")
-                $j("#clienteModal").modal("show");
+                $("#clienteModal").modal("show");
             }
 
             function Save() {
@@ -179,7 +180,7 @@
                 {
                     var selections = gridProduct.getSelections();
                     var cliente = {
-
+                        IdCliente: $("#idCliente").val(),
                         Codigo: $("#codigo").val(),
                         FechaCompra1: $("#fechaCompra").val(),
                         FechaCompra2: $("#fechaProximaCompra").val(),
@@ -193,12 +194,14 @@
                         dias: $("#dias").val()
 
                     };
-                    $.ajax({ url: "Save", type: "POST", data: { cliente: cliente } })
+                    $.ajax({ url: "Cliente/Save", type: "POST", data: { cliente: cliente } })
                         .done(function () {
+                            debugger;
                             grid.reload();
                             $("#clienteModal").modal("hide");
                         })
                         .fail(function () {
+                            debugger;
                             alert("Unable to save.");
                             $("#clienteModal").modal("hide");
                         });
