--- a/ERPAnimalia/Views/ListProduct/Index.cshtml
+++ b/ERPAnimalia/Views/ListProduct/Index.cshtml
@@ -25,7 +25,7 @@
                 { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 120 },
                 { field: "SubCategoryName", title: "SubCategoria", sortable: true, width: 100 },
                 { field:"CategoryName", title: "Categoria", sortable: true, width: 100 },
-                { field: "Kg", title: "Kg", sortable: true, width: 80 },
+                { field: "kg", title: "Kg", sortable: true, width: 80 },
                 { field: "Cantidad", title: "Cantidad", sortable: true, width: 80 },
                 { field: "PrecioCosto", title: "Precio Costo", sortable: true, width: 80 },
                 { field: "PrecioVenta", title: "Precio Venta", sortable: true, width: 80 },
