--- a/ERPAnimalia/Views/Product/Edit.cshtml
+++ b/ERPAnimalia/Views/Product/Edit.cshtml
@@ -71,11 +71,11 @@
 
                         <div class="form-group">
                             <label class="col-md-4" for="pwd">Precio Costo</label>
-                            @Html.TextBoxFor(m => m.PrecioCosto, new { @class = "form-control", type = "text", placeholder = "Precio Costo" })
+                            @Html.TextBoxFor(m => m.PrecioCosto, new { @class = "form-control", type = "number", min = "0", step = "0.01", placeholder = "Precio Costo" })
                         </div>
                         <div class="form-group">
                             <label class="col-md-4" for="pwd">Precio Venta</label>
-                            @Html.TextBoxFor(m => m.PrecioVenta, new { @class = "form-control", type = "text", placeholder = "Precio Venta" })
+                            @Html.TextBoxFor(m => m.PrecioVenta, new { @class = "form-control", type = "number", min = "0", step = "0.01", placeholder = "Precio Venta" })
                         </div>
                     
 
