--- a/ERPAnimalia/Views/LoadOrder/Index.cshtml
+++ b/ERPAnimalia/Views/LoadOrder/Index.cshtml
@@ -15,7 +15,6 @@
     $(document).ready(function () {
         $("#NombreCompleto").autocomplete({
             source: function (request, response) {
-                debugger;
                 $.ajax({
                     url: "/LoadOrder/GetProveedor",
                     type: "POST", dataType: "json",
@@ -31,7 +30,7 @@
         });
 
         
-        $('#FechaPago').datepicker({
+        $('#fechaPago').datepicker({
                     dateFormat: "dd-mm-yy",
                     firstDay: 1,
                     dayNamesMin: ["Do", "Lu", "Ma", "Mi", "Ju", "Vi", "Sa"],
@@ -59,7 +58,8 @@
 
                 $.datepicker.setDefaults($.datepicker.regional["es"]);
 
-                $("#FechaPago").datepicker("setDate", new Date());
+                $("#fechaPago").datepicker("setDate", new Date());
+                $("#date").datepicker("setDate", new Date());
 
                
     });
@@ -78,7 +78,7 @@
         </div>
         <div class="form-group">
             <label class="control-label col-md-3" for="fechaPago">Fecha de Pago</label>
-            <input type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="FechaPago" placeholder="Ingrese Fecha de Pago">
+            <input type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="fechaPago" placeholder="Ingrese Fecha de Pago">
         </div>
         <div class="form-group">
             <label class="control-label col-md-3" for="date">Fecha</label>
@@ -90,7 +90,7 @@
 
         <div class="form-group">
             <label class="control-label col-md-3">Forma Pago:</label>
-            @Html.DropDownList("formaDePago", new SelectList((System.Collections.IEnumerable)ViewData["listFormaPago"], "IdFormaDePago", "Descripcion"), new { @class = "form-control" })
+            @Html.DropDownList("formaPago", new SelectList((System.Collections.IEnumerable)ViewData["listFormaPago"], "IdFormaDePago", "Descripcion"), new { @class = "form-control" })
         </div>
   
             @{
