--- a/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
+++ b/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
@@ -55,8 +55,8 @@
                         type: "POST", dataType: "json",
                         data: { term: term },
                         success: function (data) {
-                            $('#idDireccion').html('Tel: ' + data[0].Direccion);
-                            $('#idTelefono').html('Dirección: ' + data[0].Telefono);
+                            $('#idDireccion').html('Dirección: ' + data[0].Direccion);
+                            $('#idTelefono').html('Tel: ' + data[0].Telefono);
                         }
                     });
         });    
@@ -72,7 +72,9 @@
             <div class="form-group">
                 <label class="control-label col-md-3" for="cliente">Cliente:</label>
                 @Html.EditorFor(model => model.clientModel.First().NombreCompleto, new { htmlAttributes = new { @class = "form-control" } })
+                <br />
                 <label class="label label-primary col-md-5" id="idTelefono"></label><div class="col-md-1"></div><label class="label label-primary col-md-5" id="idDireccion"></label>
+                <br />
             </div>
             <div class="form-group">
                 <label class="control-label col-md-3" for="DateVoucher">Fecha</label>
