--- a/ERPAnimalia/Views/Shared/_Layout.cshtml
+++ b/ERPAnimalia/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ventas <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li>@Html.ActionLink("Producto","Index","Product")</li>
+                        <li>@Html.ActionLink("Producto","Index", "ListProduct")</li>
                         <li>@Html.ActionLink("Cliente","Index", "Cliente")</li>
                         <li>@Html.ActionLink("Factura", "CrearFactura", "Factura")</li>
 
