--- a/ERPAnimalia/Views/Shared/_Layout.cshtml
+++ b/ERPAnimalia/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Compras <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Proveedor</a></li>
+                        <li>@Html.ActionLink("Nota de Pedido", "Index", "LoadOrder")</li>
                         <li><a href="#">Articulo</a></li>
                         <li><a href="#">Factura</a></li>
                     </ul>
